--- a/src/App.css
+++ b/src/App.css
@@ -48,3 +48,104 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield;
 }
+
+.sheet-container {
+  margin: 20px;
+  border: 5px solid blue;
+}
+
+.sheet-head-wrapper {
+  display: flex;
+}
+
+.sheet-head-left-wrapper {
+  flex: 1;
+  text-align: left;
+}
+
+.sheet-head-middle-wrapper {
+  flex: 1;
+}
+
+.sheet-head-right-wrapper {
+  flex: 2;
+  text-align: left;
+}
+
+.sheet-box-container {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+}
+
+.sheet-row-container {
+  display: flex;
+}
+
+.box-1-edaravone {
+  flex: 1;
+  border: 1px solid red;
+}
+
+.box-2-edaravone {
+  flex: 1;
+  border: 1px solid red;
+}
+
+.box-3-bipap {
+  flex: 1;
+  border: 1px solid red;
+}
+
+.box-4-bipap {
+  flex: 1;
+  border: 1px solid red;
+}
+
+.box-5-sleep {
+  flex: 2;
+  border: 1px solid red;
+}
+
+.box-6-bipap {
+  flex: 2;
+  border: 1px solid red;
+}
+
+.box-7-elimination {
+  flex: 2;
+  border: 1px solid red;
+}
+
+.box-8-medication {
+  flex: 2;
+  border: 1px solid red;
+}
+
+.box-9-gtube {
+  flex: 2;
+  border: 1px solid red;
+}
+
+.box-10-dinner {
+  flex: 2;
+  border: 1px solid red;
+}
+
+.box-11-pain-discomfort {
+  flex: 2;
+  border: 1px solid red;
+}
+
+.box-12-choking-gagging {
+  flex: 2;
+  border: 1px solid red;
+}
+
+.sheet-foot-wrapper {
+  text-align: left;
+}
+
+.sheet-foot-wrapper textarea {
+  width: 95%;
+}
