--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,7 @@ input[type="number"] {
 
 .sheet {
   padding: 40px;
+  background-color: antiquewhite;
 }
 
 .sheet-container {
@@ -76,6 +77,7 @@ input[type="number"] {
   flex: 2;
   text-align: left;
   padding: 10px;
+  font-weight: bold;
 }
 
 .sheet-head-right-wrapper textarea {
