--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ input[type="number"] {
 
 .sheet {
   padding: 40px;
-  background-color: antiquewhite;
+  background-color: ivory;
 }
 
 .sheet-container {
@@ -186,6 +186,10 @@ input[type="number"] {
   display: flex;
 }
 
+.box-9-inner-wrapper {
+  display: flex;
+}
+
 .box-11-inner-wrapper {
   display: flex;
   flex-direction: column;
@@ -217,6 +221,14 @@ input[type="number"] {
 
 .box-8-inner-right {
   flex: 2;
+}
+
+.box-9-inner-left {
+  flex: 1;
+}
+
+.box-9-inner-right {
+  flex: 1;
 }
 
 .box-11-bottom {
